Adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -17,6 +17,10 @@
     <hr>
 
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit, officiis earum? Veniam illum, eum sunt neque non possimus quod, dolor provident velit illo totam ea temporibus error expedita, architecto odio. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sunt quo repellat unde neque numquam. Repudiandae nobis temporibus, itaque quasi eveniet aspernatur, non magni molestias dolore labore quisquam provident deserunt delectus?</p>
+
+    <hr>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum obcaecati sit velit optio aperiam voluptatum libero doloremque voluptates fugit eos deserunt sunt rerum eaque, praesentium tempore ipsum possimus dolore amet.</p>
     
 </body>
 </html>
